tests/fixtures/errors/generic_value_match.z
# a match dissects the TYPE parameter (match t); a VALUE of generic-param
# type has no per-instance arm dispatch in the shared template body

pick: function as { t: Any.generic } in { val: t } out u64 is {
    match (val) case some then {
        return 1
    } else null
    return 0
}

main: function is {
    o: (optionval.some 7.u64)
    print "\{pick val: o}"
}
